--- a/ConsultorioSeguros/ConsultorioSeguros.csproj
+++ b/ConsultorioSeguros/ConsultorioSeguros.csproj
@@ -341,6 +341,7 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Models\MySql\ScriptDb\ConsultorioDb.sql" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.js" />
