--- a/ConsultorioSeguros/Web.config
+++ b/ConsultorioSeguros/Web.config
@@ -9,14 +9,16 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="MySqlConnection" providerName="MySql.Data.MySqlClient" connectionString="Server=localhost;Initial Catalog=consultoriodb;User ID=root;Password=M#sterr00tx5;" />
+    <!--<add name="MySqlConnection" providerName="MySql.Data.MySqlClient" connectionString="Server=localhost;Initial Catalog=consultoriodb;User ID=root;Password=M#sterr00tx5;" />-->
+    <add name="ServerConnection" providerName="System.Data.SqlClient" connectionString="Server=tcp:testdb1220.database.windows.net,1433;Initial Catalog=consultoriodb;Persist Security Info=False;User ID=myroot;Password=M#sterr00tx5;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="AppHost" value="http://localhost:50643" />
+    <!--<add key="AppHost" value="http://localhost:50643" />-->
+    <add key="AppHost" value="https://consultorioseguros.azurewebsites.net" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
@@ -128,11 +130,12 @@
       <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=8.0.27.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
     </DbProviderFactories>
   </system.data>
-<system.webServer>
+  <system.webServer>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
-  </system.webServer></configuration>
+  </system.webServer>
+</configuration>
